JamNNTPd version 0.6 alpha from 2003-12-21.
 - Configurable charset handling based on CHS files in the GoldED+ format.

 - Greatly improved MIME-handling. JamNNTPd now handles both quoted-printable
   and base64 in both headers and message body when posting messages. Message
   headers containing non-ascii characters are encoded when displayed unless
   the -noencode option is used.

 - Now supports "quoting" with backslash as described in RFC-822.

 - New command-line option -origin

 - New command-line option -keepsoftcr

 - Support for TZUTC/TZUTCINFO kludges. Thanks to Peter Karlsson for the patch.
   New command-line option -notzutc.

 - Better parsing of configuration files. You can now use quotes for strings
   containing space characters. "" means an empty string.

 - Groups are now case-insensitive. In addition, "*" now means all groups and
   "-" means no groups.

 - Fixed response code of NEWGROUPS command.

 - LIST ACTIVE and LIST OVERVIEW.FMT are now also supported.

 - JamNNTPd now creates an X-Comment-To header line

 - The signature delimiter "-- " is no longer reflowed when posting with
   format=flowed.

 - All characters <32 are removed in the output of the XOVER command to
   prevent problems.

 - Increased the maximum size for posts from 10 000 bytes to 20 000 bytes.

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,42 @@
+Changes in version 0.6
+
+ - Configurable charset handling based on CHS files in the GoldED+ format.
+
+ - Greatly improved MIME-handling. JamNNTPd now handles both quoted-printable
+   and base64 in both headers and message body when posting messages. Message
+   headers containing non-ascii characters are encoded when displayed unless
+   the -noencode option is used.
+
+ - Now supports "quoting" with backslash as described in RFC-822.
+
+ - New command-line option -origin
+
+ - New command-line option -keepsoftcr
+
+ - Support for TZUTC/TZUTCINFO kludges. Thanks to Peter Karlsson for the patch.
+   New command-line option -notzutc.
+
+ - Better parsing of configuration files. You can now use quotes for strings
+   containing space characters. "" means an empty string.
+
+ - Groups are now case-insensitive. In addition, "*" now means all groups and
+   "-" means no groups.
+
+ - Fixed response code of NEWGROUPS command.
+
+ - LIST ACTIVE and LIST OVERVIEW.FMT are now also supported.
+
+ - JamNNTPd now creates an X-Comment-To header line
+
+ - The signature delimiter "-- " is no longer reflowed when posting with
+   format=flowed.
+
+ - All characters <32 are removed in the output of the XOVER command to
+   prevent problems.
+
+ - Increased the maximum size for posts from 10 000 bytes to 20 000 bytes.
+
+
 Changes in version 0.5
 
  - Superfluous space characters are now removed when lines are joined when
