--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,7 @@
 Changes in version 0.6
 
  - Configurable charset handling based on CHS files in the GoldED+ format. 
-   The -keepsoftcr option can be used to prevent JamNNTPd from removing 
-   the Soft-CR character (0x8d) used in some character sets. 
-
+   
  - Greatly improved MIME-handling. JamNNTPd now handles both quoted-printable
    and base64 in both headers and message body when posting messages. Message
    headers containing non-ascii characters are encoded when displayed unless
@@ -31,7 +29,7 @@ Changes in version 0.6
    groups and "-" means no groups.
 
  - The -smartquote option no longer removes initial space characters from 
-   quoted text
+   quoted text and inserts incorrect initials.
  
  - Fixed broken response code of NEWGROUPS command.
 
@@ -40,7 +38,8 @@ Changes in version 0.6
  - JamNNTPd now displays an X-Comment-To header line.
 
  - The signature delimiter "-- " is no longer reflowed when posting with
-   format=flowed.
+   format=flowed. Fixed display problems with long lines without spaces 
+   and format=flowed.
 
  - All characters <32 are removed in the output of the XOVER command to
    prevent problems.
@@ -48,7 +47,10 @@ Changes in version 0.6
  - Increased the maximum size for posts from 10 000 bytes to 20 000 bytes.
 
  - JamNNTPd no longer crashes when an area cannot be opened.
- 
+
+ - JamNNTPd no longer crashes when trying to display messages with blank 
+   JAMSFLD_FTSKLUDGE fields in the XOVER command.
+  
  - The body text of posts that started with a blank line were lost in 
    previous versions. This has now been fixed.
 
