--- a/History.txt
+++ b/History.txt
@@ -5,14 +5,19 @@ Changes in version 1.0
  
  - Added support for cancel messages
  
+ - It is now possible to read configuration options from a file using the
+   new -config option. If JamNNTPd is started without any command-line 
+   arguments at all, it will read configuration options from the file 
+   jamnntpd.config if it is present.
+   
  - Introduced the -readorigin switch that makes JamNNTPd read addresses
    from the origin line instead of the JAM headers.
    
  - "To: name" can be used on the first line of posted messages to set an 
    alternative recipient name.
  
- - Added partial support for LIST NEWSGROUPS so that JamNNTPd also works 
-   with Lynx.
+ - Added partial support for the LIST NEWSGROUPS command so that JamNNTPd 
+   also works with Lynx.
  
  - JamNNTPd no longer adds an empty REPLY kludge if to MSGID was found.
  
