--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,8 @@
 
+Changes in version 1.1
+
+ - Ported to OS/2
+ 
 Changes in version 1.0
 
  - Added support for netmail and local areas (see examples/jamnntpd.groups)
