Change my email adx usage to jame@rocasa.us

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ jamnntpd (1.0-1) UNRELEASED; urgency=low
 
   * Initial Debian release of jamnntpd v1.0
 
- -- Robert James Clay <jame@rocasa.org>  Sun, 20 Sep 2009 22:56:52 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 20 Sep 2009 22:56:52 -0400
