--- a/debian/manpage.1
+++ b/debian/manpage.1
@@ -55,5 +55,5 @@ available via the Info system.
 .SH AUTHOR
 jamnntpd was written by <upstream author>.
 .PP
-This manual page was written by Robert James Clay <jame@rocasa.org>,
+This manual page was written by Robert James Clay <jame@rocasa.us>,
 for the Debian project (but may be used by others).
