Include closing of ITP # 223905 in initial debian/changelog entry.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 jamnntpd (1.0-1) UNRELEASED; urgency=low
 
-  * Initial Debian release of jamnntpd v1.0
+  * Initial release. (Closes: #223905)
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 20 Sep 2009 22:56:52 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 25 Jan 2013 20:36:52 -0400
