--- a/debian/jamnntpd.1
+++ b/debian/jamnntpd.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH JAMNNTPD SECTION "May 8, 2013"
+.TH JAMNNTPD 1 "May 18, 2013"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
