Correct AUTHOR entry in debian/jamnntpd.1 and debian/makechs.1.

--- a/debian/jamnntpd.1
+++ b/debian/jamnntpd.1
@@ -126,7 +126,7 @@ Create a configuration file with the default settings.
 The ReadMe.txt file and
 .BR makechs (1).
 .SH AUTHOR
-jamnntpd was written by <upstream author>.
+jamnntpd was written by Johan Billing <billing@df.lth.se>.
 .PP
 This manual page was written by Robert James Clay <jame@rocasa.us>,
 for the Debian project (but may be used by others).
