--- a/debian/makechs.1
+++ b/debian/makechs.1
@@ -49,7 +49,7 @@ The output of makechs is written to the console and needs to be redirected to th
 .BR jamnntpd(1).
 .br
 .SH AUTHOR
-makechs was written by <upstream author>.
+makechs was written by Johan Billing <billing@df.lth.se>.
 .PP
 This manual page was written by Robert James Clay <jame@rocasa.us>,
 for the Debian project (but may be used by others).
