--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,19 @@
 
+Changes in version 1.3
+
+ - Correct the order for how 'min' & 'max' are listed in the command
+   NNTP LIST [ACTIVE] in src/nntpserv.c from 'group min max flag' to
+   'group max min flag'. Reference RFC 3977 (and its ancestor RFC 977),
+   where they note that 'max' comes before 'min'. Thanks go to
+   Urs Janßen <urs@tin.org>.
+   Closes https://sourceforge.net/p/ftnapps/jamnntpd/tickets/4/
+
+ - Correct XOVER response by adding an extra '\t' character to line 1381
+   of src/nntpserv.c. Thanks to mark.lewis@p0.f12.n3634.z1.fidonet.org.
+   Closes https://sourceforge.net/p/ftnapps/jamnntpd/tickets/5/
+
+ - Correct spelling of 'JamNNTd' as 'JamNNTPd' in examples/jamnntpd.users.
+
 Changes in version 1.2
 
  - Make From addresses into valid RFC 5322 addresses.
