--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jamnntpd (1.3-0~1) UNRELEASED; urgency=medium
+
+  * New Upstream Release.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 10 Sep 2016 14:53:40 -0400
+
 jamnntpd (1.2-1) unstable; urgency=low
 
   * Initial release. (Closes: #223905)
