--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
-jamnntpd (1.3-0~1) UNRELEASED; urgency=medium
+jamnntpd (1.3-1) UNRELEASED; urgency=medium
 
   * New Upstream Release.
+  * Changes to debian/control:
+    - Use https URL for the 'Vcs-Git' keyword.
+    - Use https URL for the 'Vcs-Browser' keyword.
+    - Add 'lsb-base (>= 3.0-6)' to the Depends setting.
+    - Remove the 'jamnntpd-dbg' stanza  as no longer necessary.
+  * Changes to debian/copyright:
+    - Change 'Copyright-Format 1.0' URL to use HTTPS. 
+    - Update copyright years for the 'debian/*' Files stanza
+    - Add Robert James Clay to the 'Files: *' stanza.
+   * Changes to debian/rules:
+    - Add setting of hardening flags for package build.
+    - Update 'override_dh_strip' target for dbgsym migration.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 10 Sep 2016 14:53:40 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue,  5 Sep 2017 13:13:09 -0400
 
 jamnntpd (1.2-1) unstable; urgency=low
 
