--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ jamnntpd (1.3-1) UNRELEASED; urgency=medium
   * Changes to debian/control:
     - Use https URL for the 'Vcs-Git' keyword.
     - Use https URL for the 'Vcs-Browser' keyword.
+    - Declare compliance with Debian Policy 4.1.0.
     - Add 'lsb-base (>= 3.0-6)' to the Depends setting.
     - Remove the 'jamnntpd-dbg' stanza  as no longer necessary.
   * Changes to debian/copyright:
@@ -14,7 +15,7 @@ jamnntpd (1.3-1) UNRELEASED; urgency=medium
     - Add setting of hardening flags for package build.
     - Update 'override_dh_strip' target for dbgsym migration.
 
- -- Robert James Clay <jame@rocasa.us>  Tue,  5 Sep 2017 13:13:09 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 10 Oct 2017 12:35:16 -0400
 
 jamnntpd (1.2-1) unstable; urgency=low
 
